# text-to-speech

./: .gitignore  LICENSE  README.md  format.sh  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  main.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_voices.py
