[project]
name = "edge-tts-server"
version = "0.1.0"
description = "A Text-to-Speech server using Microsoft Edge TTS"
authors = [
    { name = "gcnyin", email = "" }
]
dependencies = [
    "edge-tts>=7.0.0",
    "fastapi>=0.115.8",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "Jinja2>=3.1.5",
]
requires-python = ">=3.11.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["tts", "edge-tts", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.urls]
Homepage = "https://github.com/gcnyin/edge-tts-server"
Repository = "https://github.com/gcnyin/edge-tts-server.git"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build]
artifacts = [
    "*.pyc",
    "__pycache__",
    "*.pyo",
    "*.pyd",
    "*.so",
    "*.dylib",
    "*.dll",
]
exclude = [
    "/.git",
    "/.github",
    "/.vscode",
    "/.idea",
    "/tests",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.metadata.hooks.custom]
created = "2025-01-31 03:41:34"
